--- a/audiorecord/build.gradle
+++ b/audiorecord/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.library'
 
 apply plugin: 'com.github.dcendents.android-maven'
-
-group='com.github.audiorecord'
+group='com.github.jinhuizxc'
 
 android {
     compileSdkVersion 28
