--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,6 @@ dependencies {
 
 //    implementation 'com.lqr.audio:library:1.0.0'
 
-    implementation project(path: ':audiorecord')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
@@ -45,6 +44,8 @@ dependencies {
     annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.ext.butterknifeVersion"
 
 
-//    implementation 'com.github.jinhuizxc:AudioRecord:1.0'
+
+//    implementation 'com.github.jinhuizxc:AudioRecord:v1.1.0'
+    implementation project(path: ':audiorecord')
 
 }
